--- a/style.css
+++ b/style.css
@@ -56,7 +56,11 @@ h5{
     margin-left: 10%;
 }
 .download-button {
-	margin: 1% 3% 5% 0%;
+    display:inline-block;
+    margin-left: -30px;
+    height: 3rem;
+    width: 203px;
+    object-fit:contain;
 }
 .button-text{
     
@@ -131,6 +135,10 @@ h5{
 }
 .imgContainer1{
     margin: 0 200px;
+    display: inline-block;
+}
+.imgContainer2{
+    display: inline-block;
 }
 .product-bottom{
     margin-top: 0;
@@ -218,7 +226,7 @@ h5{
 }
 #blog{
     background-image: url("https://static.wixstatic.com/media/ec9816_2eb87f9f47224104b16ec5e3cc468f59~mv2.png/v1/fill/w_1366,h_759,al_c,q_95/ec9816_2eb87f9f47224104b16ec5e3cc468f59~mv2.webp");
-    height: 660px;
+    height: 700px;
     width: 100%;
     padding: 4% 0 10%;
 }
@@ -233,13 +241,66 @@ h5{
     margin: 2% 3% 2%;
 }
 .lis
-{ 
-display:inline; 
-}     
+{
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+._3pDow{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 16px 0 30px;
+} 
+.blog-post-post-list-description-color{
+    color: #303030;
+} 
+.owNWA{
+    margin-bottom: 0;
+    padding-bottom: 20px;
+}
+.z8oXo{
+    display: flex;
+    align-items: center;
+    height: 100%;
+    font-family: "Avenir Next";
+    font-size: 16px;
+}
+._2u9QJ{
+line-height: 1;
+} 
+._3e7UL, ._3Zrlh {
+        margin: 0 3px;
+        min-width: 36px;
+        min-height: 36px;
+        cursor: pointer;
+        color: inherit;
+    }
+.blog-post-post-list-description-fill{
+
+}
+._3copE, ._2u9QJ, ._9t1b4, ._7SNCL, ._359ia, .z8jxD {
+        line-height: 1;
+    }
+ 
+ 
+.blog-post-post-list-description-style-font{
+    font: normal normal normal 14px/17px avenir-lt-w01_35-light1475496,sans-serif;
+    line-height: normal;
+} 
+._2LM0Z{
+cursor: default;
+} 
+.blog-button-color{
+        color: #16379A;
+    } 
+.blog-post-list-pagination-active{
+    color: rgb(48, 43, 112);
+} 
 
 /* about section */
 #about{
-    height: 600px;
+    height: 550px;
     width:100%;
     background-color:#373577;     
 }
@@ -248,10 +309,113 @@ display:inline;
     flex-direction: row;
     justify-content: space-between;
     font-size:1rem;
-    
-    padding: 8%;
+    padding-top: 6%;
+}
+.about-content h2{
+    color:#fff;
+    font-weight: inherit;
+}
+.left-about{
+    margin-left: 10%;
+    display: inline-block;
+    margin-right:50px ;
+}
+.left-about h2{
+    margin-bottom: 15%;
+}
+.middle-center{
+    display: inline-block;
+}
+.right-contact{
+    display: inline-block;
+    padding-right: 14%;
 }
 
+/* about form  */
+
+::placeholder{
+    color: #fff;
+    padding-left: 10px;
+}
+input[type="text"],input[type="email"],input[type="tel"],textarea{
+    color: #fff;
+    margin-bottom: 5px;
+}
+.input-box{
+    background-color: transparent;
+    border: none;
+    outline: none;
+}
+.input-style{
+    margin: 10px 0 4px 0;
+    border-bottom: 1px solid #fff;
+}
+#textarea{
+    background-color: transparent;
+    outline: none;
+    border: none;
+}
+input[type="submit"]{
+   background-color: transparent;
+   border: 1px solid#fff;
+   color: #fff;
+   border-radius:10%;
+   width: 28%;
+   float: right;
+   margin-top: 10px;
+}
+/* about center */
+.about-content button{
+    font-size: 14px;
+    font-weight: 700;
+}
+.about-button{
+    margin-top: 10px;
+    height:auto;
+    width: 200px; 
+}
+.middle-section h2{
+margin-bottom: 30px;
+}
+.about-content button:hover{
+    background-color: #625fad;
+    color: #fff;
+}
+.middle-section{
+    margin-bottom: 30%;
+}
+.button-about{
+    display: flex;
+}
+.download-button-about {
+    display:inline-block;
+    margin-left: -50px;
+    height: 2rem;
+    width: 190px;
+    object-fit:contain;
+}
+/* contact side */
+.contact-about h2{
+    margin-bottom: 40px;
+}
+.contact-about{
+    color: #fff;
+    font-size: 13px;
+}
+.contact-about a{
+    text-decoration: none;
+    color: #fff;
+}
+.contact-a:hover{
+    color: #fff;
+}
+.social-icon{
+    margin-right: 26px;
+    margin-bottom: 10px;
+}
+.fab{
+    color:#fff;
+}
 @media (max-width: 1028px) {
 	#title{
 		text-align: center;
